--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,6 +1,6 @@
 <div class="container"
   fxLayout = "column"
-  fxLayoutGap="10px">
+  fxLayoutGap="20px">
 
   <div fxFlex>
     <div>
@@ -10,7 +10,7 @@
   </div>
 
   <div fxFlex>
-    <mat-grid-list cols="3" rowHeight="200px">
+    <mat-grid-list cols="{{dishes.length}}" rowHeight="200px">
       <mat-grid-tile *ngFor="let dish of dishes">
         <img height="200px" src={{dish.image}} alt={{dish.name}}>
         <mat-grid-tile-footer>
@@ -20,7 +20,7 @@
     </mat-grid-list>
   </div>
 
-  <div fxFlex *ngIf="selectedDish">
+  <!-- <div fxFlex *ngIf="selectedDish">
     <mat-card>
       <mat-card-header>
         <mat-card-title>
@@ -32,11 +32,16 @@
       <p>{{selectedDish.description}}</p>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button >LIKE</button>
-      <button mat-button >SHARE</button>
+      <button mat-button color="primary">LIKE</button>
+      <button mat-raised-button color="accent">SHARE</button>
+      <button mat-flat-button color="warn">SHARE</button>
+      <button mat-stroked-button >SHARE</button>
+      <button mat-icon-button >SHARE</button>
+      <button mat-fab >SHARE</button>
+      <button mat-mini-fab >SHARE</button>
     </mat-card-actions>
     </mat-card>
-  </div>
+  </div> -->
 
 
 
