--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -45,7 +45,7 @@
 
 
 
-  <mat-list fxFlex>
+  <!-- <mat-list fxFlex>
     <mat-list-item *ngFor="let dish of dishes" (click)="onSelect(dish)">
       <img matListAvatar src={{dish.image}} alt={{dish.name}}>
       <h1 matLine>{{dish.name}}</h1>
@@ -54,7 +54,7 @@
       </p>
     </mat-list-item>
   </mat-list>
-</div>
+</div> -->
 
 
 <app-dishdetail [dish]="selectedDish"></app-dishdetail>
