--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -16,6 +16,7 @@
             {{dish.description}}
         </mat-card-content>
         <mat-card-actions align="start">
+            <button mat-button (click)="goBack()">BACK</button>
             <button mat-stroked-button color="primary" >LIKE</button>
             <button mat-raised-button color="accent" >SHARE</button>
         </mat-card-actions>
