--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,16 +5,18 @@
 </mat-toolbar>
 
 <p>{{ user | json }}</p>
-
-<form novalidate (ngSubmit)="onSubmit()">
+<!-- novalidate turns off html5 form validation -->
+<form novalidate #loginForm ="ngForm" (ngSubmit)="onSubmit()">
 
   <mat-dialog-content>
     <p>
       <mat-form-field>
-        <input matInput placeholder="Username" type="text" [(ngModel)]="user.username" name="username">
+        <input matInput placeholder="Username" type="text" [(ngModel)]="user.username" name="username"  #username="ngModel" required>
+        <mat-error *ngIf="username.hasError('required')">Username is required</mat-error>
       </mat-form-field>
       <mat-form-field>
-        <input matInput placeholder="Password" type="password" [(ngModel)]="user.password" name="password">
+        <input matInput placeholder="Password" type="password" [(ngModel)]="user.password" name="password" #password="ngModel" required>
+        <mat-error *ngIf="password.hasError('required')">Password is required</mat-error>
       </mat-form-field>
       <mat-checkbox [(ngModel)]="user.remember" name="remember">Remember Me</mat-checkbox>
     </p>
@@ -22,6 +24,7 @@
   <mat-dialog-actions>
     <span class="flex-spacer"></span>
     <button mat-button mat-dialog-close>Cancel</button>
-    <button type="submit" mat-button class="background-primary text-floral-white" >Login</button>
+    <button type="submit" mat-button class="background-primary text-floral-white"
+      [disabled]="loginForm.form.invalid">Login</button>
   </mat-dialog-actions>
 </form>
