--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,12 +1,14 @@
 
 <mat-toolbar color="primary">
-  <span><img src="/assets/images/logo.png" height=30 width=41></span>
+  <span><img src="/assets/images/logo1.png" height=45 width=45></span>
+
+  <!-- makes the Login button go to the far right of the navbar -->
+  <span class="flex-spacer"></span>
   <a mat-button routerLink="/home" routerLinkActive="active"><span class="fa fa-home fa-lg"></span> Home</a>
   <a mat-button routerLink="/about" routerLinkActive="active"><span class="fa fa-info fa-lg"></span> About</a>
   <a mat-button routerLink="/menu" routerLinkActive="active"><span class="fa fa-list fa-lg"></span> Menu</a>
   <a mat-button routerLink="/contact" routerLinkActive="active"><span class="fa fa-address-card fa-lg"></span> Contact</a>
-  <!-- makes the Login button go to the far right of the navbar -->
-  <span class="flex-spacer"></span>
+
   <!-- Login buton -->
   <a mat-button (click)="openLoginForm()"><span class="fa fa-sign-in fa-lg"></span> Login</a>
 </mat-toolbar>
@@ -21,12 +23,15 @@
       fxLayoutGap="10px">
 
     <div fxFlex fxFlex.gt-sm="50%">
-      <h1>Ristorante Con Fusion</h1>
+      <h1>Ristorante KungFucius</h1>
       <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations
         will tickle your culinary senses!</p>
     </div>
+    <div fxFlex>
+        <span class="flex-spacer"></span>
+    </div>
     <div fxFlex fxFlex.gt-sm="20%">
-      <img src="/assets/images/logo.png" alt="Logo">
+      <img src="/assets/images/logo1.png" alt="Logo" height=150 width=150>
     </div>
     <div fxFlex></div>
   </div>
