--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -33,4 +33,9 @@
         <hr>
       </mat-list>
     </mat-card>
+  </div>
+
+  <div fxFlex [hidden]='dish'>
+    <mat-spinner style="margin:0 auto;"></mat-spinner><h4>Loading...</h4>
+  </div>
 </div>
