--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -9,10 +9,10 @@
       <div fxFlex="40" fxFlexOffset="20px">
         <!-- <h4>Links</h4> -->
         <mat-list >
-          <mat-list-item><a mat-raised-button color="primary" routerLink='/home'>Home</a></mat-list-item>
-          <mat-list-item><a mat-raised-button color="primary"routerLink='/about'>About</a></mat-list-item>
-          <mat-list-item><a mat-raised-button color="primary"routerLink='/menu'>Menu</a></mat-list-item>
-          <mat-list-item><a mat-raised-button color="primary"routerLink='/contact'>Contact</a></mat-list-item>
+          <mat-list-item><a mat-icon-button color="accent" routerLink='/home'>Home</a></mat-list-item>
+          <mat-list-item><a mat-icon-button color="accent" routerLink='/about'>About</a></mat-list-item>
+          <mat-list-item><a mat-icon-button color="accent" routerLink='/menu'>Menu</a></mat-list-item>
+          <mat-list-item><a mat-icon-button color="accent" routerLink='/contact'>Contact</a></mat-list-item>
         </mat-list>
       </div>
       <div fxFlex="55">
