--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,8 @@
 
 <mat-toolbar color="primary">
-  <span><img src="/assets/images/logo1.png" height=45 width=45></span>
-
+  <a routerLink="/home" >
+    <span><img src="/assets/images/logo1.png" height=45 width=45></span>
+  </a>
   <!-- makes the Login button go to the far right of the navbar -->
   <span class="flex-spacer"></span>
   <a mat-button routerLink="/home" routerLinkActive="active"><span class="fa fa-home fa-lg"></span> Home</a>
