--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -23,7 +23,7 @@
 
   <!-- [hidden]='dishes' makes it that until the promise is resolved we show a spinner -->
   <div fxFlex [hidden]='dishes'>
-    <mat-spinner></mat-spinner>
+    <mat-spinner style="margin: 0 auto"></mat-spinner>
     <h4>Loading...</h4>
   </div>
 
