--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -1,48 +1,68 @@
-<div class="container"
-    fxLayout="row"
-    fxLayout.sm="column"
-    fxLayout.xs="column"
-    fxLayoutAlign="space-around start"
-    fxLayoutGap="10px"
-    fxLayoutGap.xs="0">
+<div class="container" fxLayout="row" fxLayout.sm="column" fxLayout.xs="column" fxLayoutAlign="space-around start"
+  fxLayoutGap="10px" fxLayoutGap.xs="0">
 
-  <div fxFlex="40" *ngIf="dish">
-    <mat-card >
-        <mat-card-header>
-            <mat-card-title>{{dish.name | uppercase}}</mat-card-title>
-        </mat-card-header>
-        <img matCardImage src="{{dish.image}}">
-        <mat-card-content >
-            {{dish.description}}
-        </mat-card-content>
-        <mat-card-actions align="start">
-          <button mat-button [routerLink]="['/dishdetail', prev]">
-            <span class="fa fa-chevron-left fa-lg"></span>
-          </button>
-          <button mat-button (click)="goBack()">BACK</button>
-          <button mat-stroked-button color="primary" >LIKE</button>
-          <button mat-raised-button color="accent" >SHARE</button>
-          <span class="flex-spacer"></span>
-          <button mat-button [routerLink]="['/dishdetail', next]">
-            <span class="fa fa-chevron-right fa-lg"></span>
-          </button>
-        </mat-card-actions>
+
+
+  <div fxFlex="48" *ngIf="dish">
+    <mat-card>
+      <mat-card-header>
+        <mat-card-title>{{dish.name | uppercase}}</mat-card-title>
+      </mat-card-header>
+      <img matCardImage src="{{dish.image}}">
+      <mat-card-content>
+        {{dish.description}}
+      </mat-card-content>
+      <mat-card-actions align="start">
+        <button mat-button [routerLink]="['/dishdetail', prev]">
+          <span class="fa fa-chevron-left fa-lg"></span>
+        </button>
+        <button mat-button (click)="goBack()">BACK</button>
+        <button mat-stroked-button color="primary">LIKE</button>
+        <button mat-raised-button color="accent">SHARE</button>
+        <span class="flex-spacer"></span>
+        <button mat-button [routerLink]="['/dishdetail', next]">
+          <span class="fa fa-chevron-right fa-lg"></span>
+        </button>
+      </mat-card-actions>
     </mat-card>
   </div>
 
-  <div fxFlex="40">
+  <div fxFlex="48">
     <mat-card *ngIf="dish">
       <h1>Comments</h1>
       <mat-list *ngFor="let item of dish.comments">
-        <p matLine>{{item.comment}} </p>
-        <p matLine><i>{{item.rating}} Stars</i></p>
-        <p matLine>-- {{item.author}} {{item.date | date}}</p>
+        <p matline>{{item.comment}} </p>
+        <p matline>{{item.rating}} </p>
+        <p matline>-- {{item.author}} {{item.date | date}}</p>
         <hr>
       </mat-list>
     </mat-card>
-  </div>
 
+    <mat-card>
+      <span *ngIf='feedbackForm.valid'>
+        <p>{{feedbackForm.value | json}}</p>
+      </span>
+    </mat-card>
+
+    <form novalidate [formGroup]="feedbackForm" #fform="ngForm" (ngSubmit)="onSubmit()">
+
+      <mat-form-field style="width: 100%;">
+        <input matInput formControlName="author" placeholder="Author" type="text" required>
+        <mat-error *ngIf="formErrors.author">{{formErrors.author}}</mat-error>
+      </mat-form-field>
+
+      <mat-slider matInput formControlName="rating" min="1" max="5" step="1" value="5" tickInterval="1"></mat-slider>
+
+      <mat-form-field style="width: 100%;">
+        <textarea matInput formControlName="comment" placeholder="Your Comment" rows=5></textarea>
+      </mat-form-field>
+
+      <button type="submit" mat-button class="background-primary text-floral-white"
+        [disabled]='feedbackForm.invalid'>Submit</button>
+    </form>
+  </div>
   <div fxFlex [hidden]='dish'>
-    <mat-spinner style="margin:0 auto;"></mat-spinner><h4>Loading...</h4>
+    <mat-spinner style="margin:0 auto;"></mat-spinner>
+    <h4>Loading...</h4>
   </div>
 </div>
