--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -26,7 +26,7 @@
     <mat-spinner style="margin: 0 auto"></mat-spinner>
     <h4>Loading...</h4>
   </div>
-
+</div>>
   <!-- <div fxFlex *ngIf="selectedDish">
     <mat-card>
       <mat-card-header>
