--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -66,7 +66,11 @@
     </mat-list>
   </div>
 
-  <div fxFlex [hidden]='leaders'>
+  <div fxFlex [hidden]='leaders || errMessage'>
     <mat-spinner style="margin:0 auto;"></mat-spinner><h4>Loading...</h4>
   </div>
+  <div fxFlex *ngIf="errMessage">
+      <h2>Error</h2>
+      <h4>{{errMessage}}</h4>
+    </div>
 </div>
