--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -61,8 +61,12 @@
         [disabled]='feedbackForm.invalid'>Submit</button>
     </form>
   </div>
-  <div fxFlex [hidden]='dish'>
+  <div fxFlex [hidden]='dish || errMsg'>
     <mat-spinner style="margin:0 auto;"></mat-spinner>
     <h4>Loading...</h4>
   </div>
+  <div fxFlex *ngIf="errMsg">
+      <h2>Error</h2>
+      <h4>{{errMsg}}</h4>
+    </div>
 </div>
