--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,5 @@
-<div class="container"
-     fxLayout="row"
-     fxLayout.sm="column"
-     fxLayout.xs="column"
-     fxLayoutAlign.gt-md="space-around center"
-     fxLayoutGap="10px">
+<div class="container" fxLayout="row" fxLayout.sm="column" fxLayout.xs="column"
+  fxLayoutAlign.gt-md="space-around center" fxLayoutGap="10px">
 
   <mat-card *ngIf="dish" fxFlex>
     <mat-card-header>
@@ -47,14 +43,29 @@
     </mat-card-content>
   </mat-card>
 
-  <div fxFlex [hidden]='dish'>
+  <div fxFlex [hidden]='dish || dishErrMess'>
     <!-- the style centers it -->
-    <mat-spinner style="margin:0 auto;" ></mat-spinner><h4>Loading...</h4>
+    <mat-spinner style="margin:0 auto;"></mat-spinner>
+    <h4>Loading...</h4>
   </div>
-  <div fxFlex [hidden]='leader'>
-    <mat-spinner style="margin:0 auto;"></mat-spinner><h4>Loading...</h4>
+  <div fxFlex [hidden]='leader || leaderErrMess'>
+    <mat-spinner style="margin:0 auto;"></mat-spinner>
+    <h4>Loading...</h4>
   </div>
-  <div fxFlex [hidden]='promotion'>
-    <mat-spinner style="margin:0 auto;"></mat-spinner><h4>Loading...</h4>
+  <div fxFlex [hidden]='promotion || promotionErrMess'>
+    <mat-spinner style="margin:0 auto;"></mat-spinner>
+    <h4>Loading...</h4>
+  </div>
+  <div fxFlex *ngIf="dishErrMess">
+    <h2>Error</h2>
+    <h4>{{dishErrMess}}</h4>
+  </div>
+  <div fxFlex *ngIf="leaderErrMess">
+    <h2>Error</h2>
+    <h4>{{leaderErrMess}}</h4>
+  </div>
+  <div fxFlex *ngIf="promotionErrMess">
+    <h2>Error</h2>
+    <h4>{{promotionErrMess}}</h4>
   </div>
 </div>
