--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,6 +1,4 @@
-<div class="container"
-  fxLayout = "column"
-  fxLayoutGap="20px">
+<div class="container" fxLayout="column" fxLayoutGap="20px">
 
   <div fxFlex>
     <div>
@@ -22,12 +20,16 @@
   </div>
 
   <!-- [hidden]='dishes' makes it that until the promise is resolved we show a spinner -->
-  <div fxFlex [hidden]='dishes'>
+  <div fxFlex [hidden]='dishes || errMess'>
     <mat-spinner style="margin: 0 auto"></mat-spinner>
     <h4>Loading...</h4>
   </div>
+  <div fxFlex *ngIf="errMess">
+    <h2>Error</h2>
+    <h4>{{errMess}}</h4>
+  </div>
 </div>>
-  <!-- <div fxFlex *ngIf="selectedDish">
+<!-- <div fxFlex *ngIf="selectedDish">
     <mat-card>
       <mat-card-header>
         <mat-card-title>
@@ -52,7 +54,7 @@
 
 
 
-  <!-- <mat-list fxFlex>
+<!-- <mat-list fxFlex>
     <mat-list-item *ngFor="let dish of dishes" (click)="onSelect(dish)">
       <img matListAvatar src={{dish.image}} alt={{dish.name}}>
       <h1 matLine>{{dish.name}}</h1>
