--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -9,10 +9,10 @@
       <div fxFlex="40" fxFlexOffset="20px">
         <!-- <h4>Links</h4> -->
         <mat-list >
-          <mat-list-item><a mat-icon-button color="accent" routerLink='/home'>Home</a></mat-list-item>
-          <mat-list-item><a mat-icon-button color="accent" routerLink='/about'>About</a></mat-list-item>
-          <mat-list-item><a mat-icon-button color="accent" routerLink='/menu'>Menu</a></mat-list-item>
-          <mat-list-item><a mat-icon-button color="accent" routerLink='/contact'>Contact</a></mat-list-item>
+          <mat-list-item><a mat-icon-button color="accent" routerLink='/home' appHighlighBis>Home</a></mat-list-item>
+          <mat-list-item><a mat-icon-button color="accent" routerLink='/about' appHighlighBis>About</a></mat-list-item>
+          <mat-list-item><a mat-icon-button color="accent" routerLink='/menu' appHighlighBis>Menu</a></mat-list-item>
+          <mat-list-item><a mat-icon-button color="accent" routerLink='/contact' appHighlighBis>Contact</a></mat-list-item>
         </mat-list>
       </div>
       <div fxFlex="55">
@@ -29,12 +29,12 @@
   </div>
   <div fxFlex="100" fxFlex.gt-sm="45">
     <div style="text-align:center">
-      <a mat-icon-button class="btn-google-plus" href="http://google.com/+"><i class="fa fa-google-plus fa-lg"></i></a>
-      <a mat-icon-button class="btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook fa-lg"></i></a>
-      <a mat-icon-button class="btn-linkedin" href="http://www.linkedin.com/in/"><i class="fa fa-linkedin fa-lg"></i></a>
-      <a mat-icon-button class="btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter fa-lg"></i></a>
-      <a mat-icon-button class="btn-youtube" href="http://youtube.com/"><i class="fa fa-youtube fa-lg"></i></a>
-      <a mat-icon-button class="btn-mail" href="mailto:"><i class="fa fa-envelope-o fa-lg"></i></a>
+      <a mat-icon-button class="btn-google-plus" href="http://google.com/+" appHighlighBis><i class="fa fa-google-plus fa-lg"></i></a>
+      <a mat-icon-button class="btn-facebook" href="http://www.facebook.com/profile.php?id=" appHighlighBis><i class="fa fa-facebook fa-lg"></i></a>
+      <a mat-icon-button class="btn-linkedin" href="http://www.linkedin.com/in/" appHighlighBis><i class="fa fa-linkedin fa-lg"></i></a>
+      <a mat-icon-button class="btn-twitter" href="http://twitter.com/" appHighlighBis><i class="fa fa-twitter fa-lg"></i></a>
+      <a mat-icon-button class="btn-youtube" href="http://youtube.com/" appHighlighBis><i class="fa fa-youtube fa-lg"></i></a>
+      <a mat-icon-button class="btn-mail" href="mailto:" appHighlighBis><i class="fa fa-envelope-o fa-lg"></i></a>
     </div>
   </div>
   <div>
