--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,3 +46,16 @@ body {
 .flex-spacer {
 flex: 1 1 auto;
 }
+
+.highlight {
+  background-color: $background-pale;
+  border: 1px solid $primary-color-dark;
+  z-index: 1;
+  transform: scale(1.09);
+}
+
+.socialmediahighlight {
+  border: 1px solid $primary-color-dark;
+  z-index: 1;
+  transform: scale(1.09);
+}
