--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -40,7 +40,7 @@
     <h3>Send us your Feedback</h3>
     <p *ngIf="feedbackForm.valid">{{ feedbackForm.value | json }} </p>
 
-    <form novalidate [formGroup]="feedbackForm" #fform="ngForm" (ngSubmit)="onSubmit()">
+    <form novalidate [formGroup]="feedbackForm" #fform="ngForm" (ngSubmit)="onSubmit()" [hidden]="submitted" [@flyInOut]>
       <p>
         <mat-form-field class="half-width">
           <input matInput formControlName="firstname" placeholder="First Name" type="text" required>
@@ -66,7 +66,7 @@
           <mat-slide-toggle formControlName="agree">May we contact you?</mat-slide-toggle>
         </td>
         <td>
-          <mat-select placeholder="How?" formControlName="contacttype">
+          <mat-select placeholder="How?" formControlName="contacttype" >
             <mat-option *ngFor="let ctype of contactType" [value]="ctype">
               {{ ctype }}
             </mat-option>
@@ -80,6 +80,15 @@
       </p>
       <button type="submit" mat-button class="background-primary text-floral-white"
         [disabled]='feedbackForm.invalid'>Submit</button>
+
+
     </form>
+    <mat-card  *ngIf="submitted" [@expand]>
+      <span class="caption">Your message: {{feedback.message}}</span>
+    </mat-card>
+    <mat-card *ngIf="submitted" [@expand]>
+        <span *ngIf="feedback.agree" class="title">Thank you for your message. We will contact you as quick as possible. Have a nice day and please visit us soon.</span>
+        <span *ngIf="!feedback.agree" class="title">Thank you for your message. Have a nice day and please visit us soon.</span>
+    </mat-card>
   </div>
 </div>
