--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -32,7 +32,7 @@
       <h1>Comments</h1>
       <mat-list *ngFor="let item of dish.comments">
         <p matline>{{item.comment}} </p>
-        <p matline>{{item.rating}} </p>
+        <p matline><mat-icon>star</mat-icon>{{item.rating}}</p>
         <p matline>-- {{item.author}} {{item.date | date}}</p>
         <hr>
       </mat-list>
